hw3/decafexpr/output/dev/method2.err
output prefix: /home/galaxyvintage/Documents/CMPT/CMPT379/CMPT379/hw3/decafexpr/output/dev/llvm/method2
llvmas: /usr/lib/llvm-3.8/bin/llvm-as
llc: /usr/lib/llvm-3.8/bin/llc
cc: gcc
codegen: /home/galaxyvintage/Documents/CMPT/CMPT379/CMPT379/hw3/decafexpr/answer/decafexpr
stdlib: /home/galaxyvintage/Documents/CMPT/CMPT379/CMPT379/hw3/decafexpr/answer/decaf-stdlib.c
generating llvm code:/home/galaxyvintage/Documents/CMPT/CMPT379/CMPT379/hw3/decafexpr/answer/decafexpr ... ok
; ModuleID = 'Test'

declare void @print_int(i32)

define void @test(i32, i32) {
entry:
  %x = alloca i32
  store i32 1, i32* %x
  %2 = load i32, i32* %a
  call void @print_int(i32 %2)
  %3 = load i32, i32* %b
  call void @print_int(i32 %3)
  %4 = load i32, i32* %x
  call void @print_int(i32 %4)
  ret void
}

define i32 @main() {
entry:
  %x = alloca i32
  store i32 1, i32* %x
  %0 = load i32, i32* %x
  call void @print_int(i32 %0)
  %1 = load i32, i32* %x
  %2 = load i32, i32* %x
  %addtmp = add i32 %2, 1
  call void @test(i32 %1, i32 %addtmp)
  ret i32 0
}
assembling to bitcode:/usr/lib/llvm-3.8/bin/llvm-as "/home/galaxyvintage/Documents/CMPT/CMPT379/CMPT379/hw3/decafexpr/output/dev/llvm/method2.llvm" -o "/home/galaxyvintage/Documents/CMPT/CMPT379/CMPT379/hw3/decafexpr/output/dev/llvm/method2.llvm.bc" ... failed (1)
/usr/lib/llvm-3.8/bin/llvm-as: /home/galaxyvintage/Documents/CMPT/CMPT379/CMPT379/hw3/decafexpr/output/dev/llvm/method2.llvm:9:23: error: use of undefined value '%a'
  %2 = load i32, i32* %a
                      ^
converting to native code:/usr/lib/llvm-3.8/bin/llc "/home/galaxyvintage/Documents/CMPT/CMPT379/CMPT379/hw3/decafexpr/output/dev/llvm/method2.llvm.bc" -o "/home/galaxyvintage/Documents/CMPT/CMPT379/CMPT379/hw3/decafexpr/output/dev/llvm/method2.llvm.s" ... ok
linking:gcc -o "/home/galaxyvintage/Documents/CMPT/CMPT379/CMPT379/hw3/decafexpr/output/dev/llvm/method2.llvm.exec" "/home/galaxyvintage/Documents/CMPT/CMPT379/CMPT379/hw3/decafexpr/output/dev/llvm/method2.llvm.s" "/home/galaxyvintage/Documents/CMPT/CMPT379/CMPT379/hw3/decafexpr/answer/decaf-stdlib.c" ... ok
running:/home/galaxyvintage/Documents/CMPT/CMPT379/CMPT379/hw3/decafexpr/output/dev/llvm/method2.llvm.exec ... ok
